--- a/src/Lephone.Processor/App.config
+++ b/src/Lephone.Processor/App.config
@@ -5,7 +5,7 @@
   </configSections>
 
   <Lephone.Settings>
-    <add key="ObjectHandlerType" value="Reflection" />
+    <add key="NameMapper" value="Lephone.Core.Text.UnderlineNameMapper, Lephone.Core" />
     <add key="DataBase" value="@Access : @~test.mdb" />
   </Lephone.Settings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
