--- a/src/Lephone.Utility/Lephone.Utility.csproj
+++ b/src/Lephone.Utility/Lephone.Utility.csproj
@@ -69,9 +69,13 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>if "$(ConfigurationName)" == "Release" goto Release
-goto End
 
+"$(SolutionDir)Lephone.Processor\bin\Debug\Lephone.Processor" "$(TargetPath)" "$(ProjectDir)Utility.snk"
+
+goto End
 :Release
+
+"$(SolutionDir)Lephone.Processor\bin\Debug\Lephone.Processor" "$(TargetPath)" "$(ProjectDir)Utility.snk"
 copy *.dll ..\..\..\..\bin\
 
 :End
