--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -238,8 +238,7 @@
 goto End
 :Release
 
-"$(SolutionDir)Lephone.Processor\bin\Debug\Lephone.Processor" "$(TargetPath)"
-copy *.dll ..\..\..\..\bin\
+"$(SolutionDir)..\bin\Lephone.Processor" "$(TargetPath)"
 
 :End
 </PostBuildEvent>
