--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -25,4 +25,16 @@
     <add key="Oracle.DataBase" value="@Oracle : Data Source=localhost; User Id=llf; Password=123"/>
     <add key="Oracle.DbProviderFactory" value="@SmartDbFactory : System.Data.OracleClient, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
   </Lephone.Settings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Lephone.Data" publicKeyToken="D77BBD87A80780B6" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-3.9.3822.27146" newVersion="3.9.3822.27146"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Lephone.Core" publicKeyToken="3EACC2A29B11F14A" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-3.9.3822.27145" newVersion="3.9.3822.27145"/>
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+</configuration>
