--- a/src/Lephone.Data/Lephone.Data.csproj
+++ b/src/Lephone.Data/Lephone.Data.csproj
@@ -133,7 +133,8 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Common\LephoneSetting.cs" />
     <Compile Include="Common\ModelHandlerAttribute.cs" />
     <Compile Include="Common\ModelUpdater.cs" />
-    <Compile Include="Common\ObjectInfo_ctor.cs" />
+    <Compile Include="Common\ObjectInfoBase.cs" />
+    <Compile Include="Common\ObjectInfoFactory.cs" />
     <Compile Include="Common\TimeSpanLessDataReader.cs" />
     <Compile Include="DataReaderEmitHelper.cs" />
     <Compile Include="Definition\CacheableAttribute.cs" />
