--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -189,6 +189,10 @@
       <Project>{891EAD10-3C90-4478-A695-71F5537C2AA2}</Project>
       <Name>Lephone.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Lephone.Extra\Lephone.Extra.csproj">
+      <Project>{D009E584-9511-4243-9D2D-CD74079FB425}</Project>
+      <Name>Lephone.Extra</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Lephone.MockSql\Lephone.MockSql.csproj">
       <Project>{C79309C3-3E59-490C-89EA-6A4AA05B0DD5}</Project>
       <Name>Lephone.MockSql</Name>
@@ -196,10 +200,6 @@
     <ProjectReference Include="..\Lephone.Data\Lephone.Data.csproj">
       <Project>{25AFD300-493A-4553-B4DC-129D3A9022A8}</Project>
       <Name>Lephone.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Lephone.Utility\Lephone.Utility.csproj">
-      <Project>{78E98965-E774-4299-BCEC-26FB3CA8ABBB}</Project>
-      <Name>Lephone.Utility</Name>
     </ProjectReference>
     <ProjectReference Include="..\Lephone.Web\Lephone.Web.csproj">
       <Project>{A73147C3-73C4-4590-9EC4-250AC83F4EF5}</Project>
