--- a/src/Lephone.Data/Lephone.Data.csproj
+++ b/src/Lephone.Data/Lephone.Data.csproj
@@ -151,6 +151,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Common\StupidDataReader.cs" />
     <Compile Include="Common\VBHelper.cs" />
     <Compile Include="DbContext.cs" />
+    <Compile Include="Definition\ComposedOfAttribute.cs" />
     <Compile Include="Definition\CrossTableNameAttribute.cs" />
     <Compile Include="Definition\DbContextAttribute.cs" />
     <Compile Include="Definition\DbObjectModelAsTree.cs" />
