--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Data\CommonUsageTest.cs" />
     <Compile Include="Data\ComplexDynamicObjectTest.cs" />
     <Compile Include="Data\ComplexRelationTest.cs" />
+    <Compile Include="Data\ComposedOfTest.cs" />
     <Compile Include="Data\CreateTable\FirebirdTest.cs" />
     <Compile Include="Data\CreateTable\JoinClassTest.cs" />
     <Compile Include="Data\CreateTable\SQLiteTest.cs" />
@@ -105,6 +106,7 @@
     <Compile Include="Data\HasManyAssociateTest.cs" />
     <Compile Include="Data\HasOneAssociateTest.cs" />
     <Compile Include="Data\Inner\CommonTest.cs" />
+    <Compile Include="Data\Inner\PreComposedOfTest.cs" />
     <Compile Include="Data\KeyGenTest.cs" />
     <Compile Include="Data\LazyLoadFieldTest.cs" />
     <Compile Include="Data\LogicalOperatorTest.cs" />
