--- a/src/Lephone.Data/Lephone.Data.csproj
+++ b/src/Lephone.Data/Lephone.Data.csproj
@@ -121,6 +121,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Common\BulkCopyProcessor.cs" />
     <Compile Include="Common\CachedListInserter.cs" />
     <Compile Include="Common\ColumnFunction.cs" />
+    <Compile Include="Common\CommonExtends.cs" />
     <Compile Include="Common\DbStructInterface.cs" />
     <Compile Include="Common\DeleteToQueryComposer.cs" />
     <Compile Include="Common\DynamicLinqObjectHandler.cs" />
