--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Data\CreateTable\FirebirdTest.cs" />
     <Compile Include="Data\CreateTable\JoinClassTest.cs" />
     <Compile Include="Data\CreateTable\SQLiteTest.cs" />
+    <Compile Include="Data\CreateTable\SqlServer2005Test.cs" />
     <Compile Include="Data\CreateTable\SqlServer2008Test.cs" />
     <Compile Include="Data\DatasetTest.cs" />
     <Compile Include="Data\DateTimeTest.cs" />
@@ -136,7 +137,6 @@
     <Compile Include="Data\UnsignedNumberTest.cs" />
     <Compile Include="Data\UserIssueTest.cs" />
     <Compile Include="Data\ValidateHandlerTest.cs" />
-    <Compile Include="Data\VBHelperTest.cs" />
     <Compile Include="DotNetFramework\LinqTest.cs" />
     <Compile Include="DotNetFramework\MathTest.cs" />
     <Compile Include="DotNetFramework\NullabelTest.cs" />
