--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Data\ComplexDynamicObjectTest.cs" />
     <Compile Include="Data\ComplexRelationTest.cs" />
     <Compile Include="Data\ComposedOfTest.cs" />
+    <Compile Include="Data\ConnectionTest.cs" />
     <Compile Include="Data\CreateTable\FirebirdTest.cs" />
     <Compile Include="Data\CreateTable\JoinClassTest.cs" />
     <Compile Include="Data\CreateTable\SQLiteTest.cs" />
