--- a/src/Lephone.CodeGen/App.config
+++ b/src/Lephone.CodeGen/App.config
@@ -1,11 +1,19 @@
 <?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="Lephone.Settings" type="Lephone.Core.Setting.NameValueSectionHandler, Lephone.Core" />
+    <section name="Lephone.Settings" type="Lephone.Core.Setting.NameValueSectionHandler, Lephone.Core"/>
   </configSections>
 
   <Lephone.Settings>
-    <add key="ObjectHandlerType" value="Reflection" />
-    <add key="DataBase" value="@Access : @~test.mdb" />
+    <add key="ObjectHandlerType" value="Reflection"/>
+    <add key="DataBase" value="@Access : @~test.mdb"/>
   </Lephone.Settings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Lephone.Data" publicKeyToken="D77BBD87A80780B6" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-3.9.4034.28040" newVersion="3.9.4034.28040"/>
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+</configuration>
