--- a/src/Lephone.UnitTest.NoConfig/Lephone.UnitTest.NoConfig.csproj
+++ b/src/Lephone.UnitTest.NoConfig/Lephone.UnitTest.NoConfig.csproj
@@ -69,6 +69,6 @@
   -->
   <UsingTask TaskName="ProcessorTask" AssemblyFile="$(SolutionDir)Lephone.MSBuild\bin\$(ConfigurationName)\Lephone.MSBuild.dll" />
   <Target Name="AfterCompile">
-    <ProcessorTask KeyFile="$(KeyOriginatorFile)" ProjectDir="$(ProjectDir)" AssemblyName="@(IntermediateAssembly)" SolutionDir="$(SolutionDir)" />
+    <ProcessorTask KeyFile="$(KeyOriginatorFile)" ProjectDir="$(ProjectDir)" AssemblyName="@(IntermediateAssembly)" SolutionDir="$(SolutionDir)" ReferenceFiles="@(ReferencePath)" />
   </Target>
 </Project>
